--- a/app/src/main/res/layout/shop_info_adapter.xml
+++ b/app/src/main/res/layout/shop_info_adapter.xml
@@ -29,6 +29,17 @@
                 android:background="@drawable/right_into_selector"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"/>
+            <TextView
+                android:id="@+id/setting_button"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_marginRight="10dp"
+                android:text="远程控制"
+                android:textSize="14sp"
+                android:textColor="@color/blue"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:visibility="gone"/>
         </RelativeLayout>
         <TextView
             android:layout_width="match_parent"
