--- a/app/src/main/res/layout/activity_add_fire.xml
+++ b/app/src/main/res/layout/activity_add_fire.xml
@@ -60,7 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="终端"/>
+                    android:text="集中器"/>
                 <EditText
                     android:id="@+id/add_repeater_mac"
                     android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                     android:gravity="center_vertical"
                     android:padding="6dp"
                     android:layout_toLeftOf="@+id/scan_repeater_ma"
-                    android:hint="输入或扫描终端Mac地址"
+                    android:hint="ID"
                     android:textColor="@color/text_view_and_kuang"
                     android:textColorHint="@color/hint_color_text"
                     android:imeOptions="actionNext"
@@ -98,7 +98,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="*ID"/>
+                    android:text="*探测器"/>
                 <EditText
                     android:id="@+id/add_fire_mac"
                     android:layout_width="match_parent"
@@ -110,7 +110,7 @@
                     android:gravity="center_vertical"
                     android:padding="6dp"
                     android:layout_toLeftOf="@+id/scan_er_wei_ma"
-                    android:hint="输入或扫描传感器Mac地址"
+                    android:hint="ID"
                     android:textColor="@color/text_view_and_kuang"
                     android:textColorHint="@color/hint_color_text"
                     android:imeOptions="actionNext"
@@ -467,9 +467,33 @@
                         />
                 </RelativeLayout>
             </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="拍照上传"/>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="80dp"
+                    android:background="@drawable/edit_view_bg">
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/photo_image"
+                        android:background="@drawable/add_photo"/>
+                </RelativeLayout>
+
+            </RelativeLayout>
             <TextView
-            android:layout_width="match_parent"
-            android:layout_height="80dp" />
+                android:layout_width="match_parent"
+                android:layout_height="80dp" />
         </LinearLayout>
     </ScrollView>
 
