--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -45,6 +45,18 @@
             android:layout_centerVertical="true"
             />
         <Button
+            android:id="@+id/deal_voice_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="20dp"
+            android:textColor="#ffffff"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/make_sure_upload_btn"
+            android:layout_marginRight="10dp"
+            android:visibility="gone"
+            android:background="@drawable/login_button_selector"
+            android:text="消音" />
+        <Button
             android:id="@+id/make_sure_upload_btn"
             android:layout_width="80dp"
             android:layout_height="30dp"
