--- a/app/src/main/res/layout/activity_upload_alarm_info.xml
+++ b/app/src/main/res/layout/activity_upload_alarm_info.xml
@@ -198,13 +198,36 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="80dp"
-                    android:background="@drawable/edit_view_bg">
+                    android:layout_marginLeft="80dp">
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:id="@+id/photo_image"
-                        android:background="@drawable/add_photo"/>
+                        android:src="@drawable/image_tip"/>
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="视频上传"/>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="80dp">
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/video_upload"
+                        android:src="@drawable/video_tip"/>
                 </RelativeLayout>
 
             </RelativeLayout>
