--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -9,6 +9,14 @@
         android:layout_height="45dp"
         android:background="@color/login_btn"
         >
+        <ImageView
+            android:id="@+id/alarm_msg"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/alarm_msg"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:id="@+id/title_tv"
             android:layout_width="wrap_content"
