--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,4 +93,16 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="radio_alarm_msg" >
+        <item name="android:button">@null</item>
+        <item name="android:background">@drawable/radiobutton_background_selector</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/radiobutton_textcolor</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
