--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -69,6 +69,7 @@
             android:layout_below="@id/about_version_rela"
             android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
+            android:visibility="gone"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -78,6 +79,7 @@
             android:textColor="#9b9b9b"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
+            android:visibility="gone"
             />
         <RelativeLayout
             android:layout_width="match_parent"
@@ -92,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:text="瀚润官网:http://www.hrsst.com"
                 android:textColor="#9b9b9b"
+                android:visibility="gone"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -99,6 +102,7 @@
                 android:layout_below="@id/about_gw_tv"
                 android:text="广州瀚润信息科技股份有限公司"
                 android:textColor="#9b9b9b"
+                android:visibility="gone"
                 />
         </RelativeLayout>
     </RelativeLayout>
