--- a/app/src/main/res/layout/activity_deal_msg_detail.xml
+++ b/app/src/main/res/layout/activity_deal_msg_detail.xml
@@ -200,7 +200,7 @@
 
             <RelativeLayout
                 android:id="@+id/image_rela"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -227,7 +227,7 @@
 
             <RelativeLayout
                 android:id="@+id/video_rela"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -246,6 +246,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="100dp"
                         android:id="@+id/video_upload"
+
                         android:src="@drawable/video_tip"/>
                 </RelativeLayout>
 
