--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -51,18 +51,22 @@
     </RelativeLayout>
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="@drawable/banner"/>
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/banner_new"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="85dp"
+        android:layout_height="90dp"
         android:background="#e6e6e6">
         <LinearLayout
             android:id="@+id/alarm_history_lin"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_margin="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/corners_shape_top"
             android:orientation="vertical">
             <LinearLayout
