--- a/app/src/main/res/layout/activity_call_manager_dialog.xml
+++ b/app/src/main/res/layout/activity_call_manager_dialog.xml
@@ -3,12 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:layout_margin="10dp">
+    android:orientation="vertical"
+    android:background="@color/white">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="设备负责人信息"
+        android:padding="5dp"
+        android:textColor="#fff"
+        android:background="@color/login_btn"/>
     <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:id="@+id/maneger1_rela"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+
         <TextView
             android:id="@+id/people1_name"
             android:layout_width="wrap_content"
@@ -20,48 +29,59 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/people1_name"
             android:text="test"/>
+
+
+        <TextView
+            android:id="@+id/phone1_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/people1_name"
+            android:text="电话:"
+            android:layout_alignLeft="@id/people1_name"/>
+        <TextView
+            android:id="@+id/phone1_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/people1_name"
+            android:layout_toRightOf="@id/phone1_name"
+            android:text="13666308989"/>
+
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/text_color_gray"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:id="@+id/maneger2_rela">
         <TextView
             android:id="@+id/people2_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/people1_name"
             android:text="负责人:"/>
         <TextView
             android:id="@+id/people2_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/people1_name"
             android:layout_toRightOf="@id/people2_name"
-            android:text="test"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-        <TextView
-            android:id="@+id/phone1_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="电话:"/>
-        <TextView
-            android:id="@+id/phone1_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/phone1_name"
             android:text="test"/>
         <TextView
             android:id="@+id/phone2_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/phone1_name"
-            android:text="电话:"/>
+            android:layout_below="@id/people2_name"
+            android:text="电话:"
+            android:layout_alignLeft="@id/people2_name"/>
         <TextView
             android:id="@+id/phone2_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/phone1_name"
+            android:layout_below="@id/people2_name"
             android:layout_toRightOf="@id/phone2_name"
             android:text="test"/>
     </RelativeLayout>
+
 
 </LinearLayout>
