--- a/app/src/main/res/layout/shop_info_adapter.xml
+++ b/app/src/main/res/layout/shop_info_adapter.xml
@@ -127,15 +127,8 @@
                 android:layout_below="@id/tpye_name_tv"
                 android:layout_toRightOf="@id/address_name_tv"
                 android:text="广东省广州市黄浦区"/>
-            <TextView
-                android:id="@+id/dev_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/blue"
-                android:layout_margin="5dp"
-                android:text="安装图片"
-                android:layout_below="@id/address_name_tv"/>
+
+            </RelativeLayout>
             <TextView
                 android:id="@+id/dev_hearttime_set"
                 android:layout_width="wrap_content"
@@ -144,8 +137,7 @@
                 android:textColor="@color/blue"
                 android:layout_margin="5dp"
                 android:text="心跳时间设置"
-                android:visibility="gone"
-                android:layout_below="@id/dev_image"/>
+                android:visibility="gone"/>
             <TextView
                 android:visibility="gone"
                 android:id="@+id/addtime"
@@ -167,38 +159,90 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:orientation="vertical">
+
+
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#dddddd"/>
+        <RelativeLayout
+            android:id="@+id/state_rala"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_below="@id/address_name_tv">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/voltage_image"
+                    android:layout_width="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/p2"
+                    android:visibility="gone"/>
+                <ImageView
+                    android:id="@+id/rssi_image"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/sblb_rssi"
+                    android:visibility="gone"/>
                 <TextView
                     android:id="@+id/rssi_value"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="RSSI:0"
+                    android:layout_height="match_parent"
+                    android:text="0"
+                    android:visibility="gone"
+                    android:gravity="center"
                     android:textColor="@color/text_color_blue"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true">
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
                     android:id="@+id/manager_img"
-                    android:background="@drawable/manager_img_selector"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="10dp"/>
+                    android:src="@drawable/sblb_fzr_02"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/dev_image"
+                    android:layout_width="55dp"
+                    android:layout_height="30dp"
+                    android:textSize="10sp"
+                    android:textColor="@color/blue"
+                    android:layout_margin="5dp"
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:background="@drawable/btn_shape"
+                    android:text="安装图片"
+                    android:visibility="gone"
+                    />
                 <ImageView
                     android:id="@+id/power_button"
                     android:layout_width="60dp"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:src="@drawable/sblb_qddy"
-                    android:layout_below="@id/manager_img"
                     android:visibility="gone"/>
                 <Button
                     android:id="@+id/xy_button"
-                    android:layout_width="60dp"
-                    android:layout_height="30dp"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/login_btn_bg"
                     android:text="消音"
                     android:textColor="#fff"
                     android:textSize="10sp"
-                    android:layout_below="@id/manager_img"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:layout_margin="5dp"/>
             </LinearLayout>
-
         </RelativeLayout>
+
     </LinearLayout>
 </LinearLayout>
