--- a/app/src/main/res/layout/activity_one_gas_info.xml
+++ b/app/src/main/res/layout/activity_one_gas_info.xml
@@ -61,6 +61,16 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/gas_dw"
+                        android:text="--"
+                        android:textSize="14sp"
+                        android:textColor="#fff"
+                        android:layout_margin="5dp"
+                        android:layout_toRightOf="@id/gas_text"
+                        android:layout_alignBottom="@id/gas_text"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/gas_type"
                         android:text="--"
                         android:textSize="18sp"
